force-app/main/default/objects/ctu__Field_Default_Value_Obj__c/ctu__Field_Default_Value_Obj__c.object-meta.xml
<CustomObject>
    <label>CTU Field Default Value</label>
    <nameField>
        <label>Field Default Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CTU Field Default Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>