force-app/main/default/objects/ctu__Field_Default_Value_Obj__c/fields/ctu__Default_Value__c.field-meta.xml
<CustomField>
    <fullName>ctu__Default_Value__c</fullName>
    <label>Default Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>