force-app/main/default/objects/ctu__Field_Default_Value_Obj__c/fields/ctu__Default_Value_Label__c.field-meta.xml
<CustomField>
    <fullName>ctu__Default_Value_Label__c</fullName>
    <externalId>true</externalId>
    <label>Default Value Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>