force-app/main/default/objects/ctu__Field_Default_Value_Obj__c/fields/ctu__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>ctu__Field_Name__c</fullName>
    <externalId>true</externalId>
    <label>Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>